# ARSMulator

./: .gitignore  CMakeLists.txt  README.md  integration_test.dockerfile
.github/workflows/: build_and_test.yml  cpp-lint.yaml  cppcheck.yml  integration_test.yaml
include/: cli.h  instruction.h  machine.h  machine_byte.h  simulator.h  source_parser.h
src/: CMakeLists.txt  cli.cpp  instruction.cpp  machine.cpp  simulator.cpp  source_parser.cpp
test/: CMakeLists.txt  test_machine.cpp  test_machine_byte.cpp  test_simulator.cpp  test_source_parser.cpp
test/integration/: expected_output.txt  source_code.s
